<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormLogin.FormLogin">

     <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nome_loja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_loja"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/container_formularios"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/container_formularios"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/nome_loja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@id/container_formularios"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_senha"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_botao_entrar"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_900"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_tela_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_tela_cadastro"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/container_formularios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>